feat: Added content to html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,89 @@
 </head>
 <body>
 
-    <main id="main"></main>
+    <main id="main">
+
+        <header>
+            <h1 id="title">Mark Zuckerberg</h1>
+            <p>The man who connected billions</p>
+        </header>
+
+        <div id="img-div">
+            <img id="image" src="https://th.bing.com/th/id/R.0e6918fdb84c81c4ac81cb91482d7ff1?rik=m4XxlFr0uf7yZQ&riu=http%3a%2f%2fs3.amazonaws.com%2fdigitaltrends-uploads-prod%2f2016%2f06%2fmark-zuckerberg-headshot_wr.jpg&ehk=9VYMgeoS7DcwCu4Dl1WqFDEv711MQGSetgaq66hwkdE%3d&risl=&pid=ImgRaw&r=0" alt="mark_zuckerberg_img">
+            <figcaption id="image-caption">
+                Mark Zuckerberg, highlighted in the center, is the co-founder of Facebook, the first social network that connected billions of people - a lasting contribution to the future of digital communications.
+            </figcaption>
+        </div>
+
+        <div id="tribute-info">
+            <h3 id="info-title">Here's a time line of Mark Zuckerberg's life:</h3>
+
+            <ul>
+                <li>
+                    <strong>1984</strong> - Born in White Plains, New York.
+                </li>
+                <li>
+                    <strong>2002</strong> - Graduates from Phillips Exeter Academy and enters Harvard University.
+                </li>
+                <li>
+                    <strong>2004</strong> - Launches "TheFacebook" from his dorm room at Harvard.
+                </li>
+                <li>
+                    <strong>2007</strong> - Announces the Facebook platform, a development platform for programmers to create social applications within Facebook.
+                </li>
+                <li>
+                    <strong>2007</strong> - Launches Beacon, a social advertising system that allowed people to share information with their Facebook friends based on their browsing activities on other sites.
+                </li>
+                <li>
+                    <strong>2010</strong> - Facebook reaches the 500 million user mark.
+                </li>
+                <li>
+                    <strong>2010</strong> - Donates $100 million to Newark Public Schools, the public school system of Newark, New Jersey.
+                </li>
+                <li>
+                    <strong>2010</strong> - Signs "The Giving Pledge", in which he pledges to donate to charity at least half of his wealth over time, and invites others among the wealthy to donate 50 percent or more of their wealth to charity.
+                </li>
+                <li>
+                    <strong>2012</strong> - Marries Priscilla Chan.
+                </li>
+                <li>
+                    <strong>2012</strong> - Visits Russian Prime Minister Dmitry Medvedev in Moscow to stimulate innovation in social networks in Russia and to boost Facebook's position in the Russian market.
+                </li>
+                <li>
+                    <strong>2013</strong> - Launches Internet.org, now known as Free Basics, an effort to bring internet access to the "disconnected" parts of the world.
+                </li>
+                <li>
+                    <strong>2015</strong> - His daughter Maxima is born.
+                </li>
+                <li>
+                    <strong>2017</strong> - Receives an honorary degree from Harvard.
+                </li>
+                <li>
+                    <strong>2018</strong> - Testifies before the U.S. Congress amid privacy scandals.
+                </li>
+                <li>
+                    <strong>2019</strong> - Announces plans to integrate Facebook, Instagram, and WhatsApp.
+                </li>
+                <li>
+                    <strong>2020</strong> - Faces the "Stop Hate for Profit" advertising boycott in response to how Facebook handles hate speech and misinformation.
+                </li>
+                <li>
+                    <strong>2021</strong> - Facebook changes its name to Meta Platforms Inc., in an effort to encompass its vision of the "metaverse".
+                </li>
+            </ul>
+
+            <p>“Zuckerberg’s life and achievements are a testament to the far-reaching contribution that one man’s great intelligence, persistence, and technological vision can make to human progress and global connection.”</p>
+
+            <cite>-- Inspired by tech industry leaders</cite>
+
+            <h3>
+                If you have time, you should read more about this incredible human
+                being on his
+                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.
+              </h3>
+        </div>
+
+    </main>
     
 </body>
 </html>
