feat: Added content to CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
 
         <div id="img-div">
-            <img id="image" src="https://th.bing.com/th/id/R.0e6918fdb84c81c4ac81cb91482d7ff1?rik=m4XxlFr0uf7yZQ&riu=http%3a%2f%2fs3.amazonaws.com%2fdigitaltrends-uploads-prod%2f2016%2f06%2fmark-zuckerberg-headshot_wr.jpg&ehk=9VYMgeoS7DcwCu4Dl1WqFDEv711MQGSetgaq66hwkdE%3d&risl=&pid=ImgRaw&r=0" alt="mark_zuckerberg_img">
+            <img id="image" src="https://th.bing.com/th/id/R.0e6918fdb84c81c4ac81cb91482d7ff1?rik=m4XxlFr0uf7yZQ&riu=http%3a%2f%2fs3.amazonaws.com%2fdigitaltrends-uploads-prod%2f2016%2f06%2fmark-zuckerberg-headshot_wr.jpg&ehk=9VYMgeoS7DcwCu4Dl1WqFDEv711MQGSetgaq66hwkdE%3d&risl=&pid=ImgRaw&r=0" alt="mark_zuckerberg_img" width="900">
             <figcaption id="image-caption">
                 Mark Zuckerberg, highlighted in the center, is the co-founder of Facebook, the first social network that connected billions of people - a lasting contribution to the future of digital communications.
             </figcaption>
@@ -79,14 +79,20 @@
                 </li>
             </ul>
 
-            <p>“Zuckerberg’s life and achievements are a testament to the far-reaching contribution that one man’s great intelligence, persistence, and technological vision can make to human progress and global connection.”</p>
+            <div id="cite">
+                
+                <p>“Zuckerberg’s life and achievements are a testament to the far-reaching contribution that one man’s great intelligence, persistence, and technological vision can make to human progress and global connection.”</p>
+                
+                <cite>-- Inspired by tech industry leaders</cite>
 
-            <cite>-- Inspired by tech industry leaders</cite>
+            </div>
 
+        </div>
+
+        <div id="link-info">
             <h3>
-                If you have time, you should read more about this incredible human
-                being on his
-                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.
+                If you have time, you should read more about the Facebook creator in his
+                <a id="tribute-link" href="https://es.wikipedia.org/wiki/Mark_Zuckerberg" target="_blank">Wikipedia entry</a>.
               </h3>
         </div>
 
