--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 
     <main id="main">
 
-        <header>
             <h1 id="title">Mark Zuckerberg</h1>
             <p>The man who connected billions</p>
-        </header>
 
-        <div id="img-div">
+        <figure id="img-div">
             <img id="image" src="https://th.bing.com/th/id/R.0e6918fdb84c81c4ac81cb91482d7ff1?rik=m4XxlFr0uf7yZQ&riu=http%3a%2f%2fs3.amazonaws.com%2fdigitaltrends-uploads-prod%2f2016%2f06%2fmark-zuckerberg-headshot_wr.jpg&ehk=9VYMgeoS7DcwCu4Dl1WqFDEv711MQGSetgaq66hwkdE%3d&risl=&pid=ImgRaw&r=0" alt="mark_zuckerberg_img" width="900">
-            <figcaption id="image-caption">
+            <figcaption id="img-caption">
                 Mark Zuckerberg, highlighted in the center, is the co-founder of Facebook, the first social network that connected billions of people - a lasting contribution to the future of digital communications.
-            </figcaption>
-        </div>
+              </figcaption>
+        </figure>
 
         <div id="tribute-info">
             <h3 id="info-title">Here's a time line of Mark Zuckerberg's life:</h3>
